# ebookagent

./: .dockerignore  .gitignore  Dockerfile  Kindle Agent - Product Requirements Document.md  Kindle Agent - System Architecture Document.md  handoff-summary.md  render.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: agent.py  main.py
backend/app/tools/: analyze_pdf.py  convert_document.py  extract_metadata.py  run_ocr.py  send_to_kindle.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: UploadForm.js
